# llama.cpp-intel-optimizations

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  fazjo-out-of-resources-note.md  research.md  starthere.md
.beads/: beads.db-shm  beads.db-wal  last-touched
.codescout/: .gitignore
.serena/: project.yml
activation/: mxfp4-algorithmic-study.md  mxfp4-tg-microbench-lead-validation.md  mxfp4-tg-runtime-baseline.md  native-fp4-bdpas-capability.md  oneapi-dpas-capability.md  sycl-current-full-profile-20260706.md  sycl-decode-hottest-kernel-line-attribution.md  sycl-decode-profile-report-20260704.md  sycl-decode-profiling-completeness-validation.md  sycl-decode-timeline-profiler-validation.md  sycl-end-to-end-profiling-closure-validation.md  sycl-iga-pc-source-line-validation.md  sycl-intel-pc-sampling-capability.md  sycl-line-attribution-final.md  sycl-mxfp4-debugline-blocker-web-research.md  sycl-mxfp4-down-direct-final-proof.md  sycl-mxfp4-profiling-ladder-20260707.md  sycl-mxfp4-tg-cooptimization-validation.md  sycl-mxfp4-tg-speedup-final-review-20260707.md  sycl-mxfp4-tg-speedup-validation-20260707.md  sycl-non-vtune-source-line-validation.md  sycl-source-region-map.json  sycl-staged-profiling-closure-validation.md  sycl-vtune-gpu-trace-absence-triage.md  sycl-vtune-source-line-enablement-validation.md  vtune-2026.2-vtsspp-kernel-7.1.2.patch
benchmark_results/: dpas_tuning_cache.jsonl
common/: arg.cpp  chat.cpp  chat.h  common.cpp  common.h  fit.cpp  sampling.cpp
docs/: CHANGELOG.md  SYCL_KERNEL_ANALYSIS.md
ggml/: CMakeLists.txt
include/: llama.h
scripts/: benchmark-sycl.sh  check-sycl-alloc-usage.sh  check-sycl-cross-device-kv-contract.sh  check-sycl-dpas-capabilities.sh  check-sycl-native-fp4-bdpas.sh  check-sycl-tensor-data-usage.sh  check-sycl-vtune-source-lines.py  convert-sycl-ur-stderr.py  convert-sycl-vtune-l0-host-tasks.py  convert-sycl-zebin-line-table-to-source-csv.py  extract-sycl-gtpin-bbl-pc-counts.py  extract-sycl-pti-instcount-pc-counts.py  fattn-harness-results.txt  fattn-harness.sh  merge-sycl-staged-ledger.py  mpirun-tp.sh  parse-sycl-ablation-deltas.py  parse-sycl-iga-pc-disasm.py  parse-sycl-kernel-profile.py  parse-sycl-layer-ledger.py  parse-sycl-moe-profile.py  parse-sycl-mxfp4-tg-bench.py  parse-sycl-profile-ledger.py  parse-sycl-pti-l0.py  parse-sycl-source-attribution.py  parse-sycl-stage-manifest.py  parse-sycl-timeline.py  parse-sycl-ur-trace.py  parse-sycl-vtune-exports.py  parse-sycl-vtune-kernel-asm.py  parse-sycl-vtune-tasks.py  parse-sycl-zebin-line-table.py  prepare-sycl-iga-disasm-inputs.py  resolve-sycl-pc-samples-to-source-lines.py  resolve-sycl-zebin-asm-source-lines.py  run-sycl-mxfp4-tg-microbenches.py  sycl-b50-gptoss-moe-gates.sh  sycl-build.sh  sycl-cpu-offload-bench-vtune.sh  sycl-dual-gpu-gptoss-gate.sh  (+17 more)
src/: CMakeLists.txt  llama-batch.h  llama-context.cpp  llama-graph.cpp  llama-kv-block.cpp  llama-kv-block.h  llama-kv-cache.cpp  llama-memory-recurrent.cpp  llama-mmap.cpp  llama-model-loader.cpp  llama-model.cpp  llama-moe-profile.cpp  llama-moe-profile.h  llama-pp-scheduler.cpp  llama-pp-scheduler.h  llama-sampler.cpp  llama-tensor-class.cpp  (+3 more)
tools/onednn-woq-repro/: CMakeLists.txt  onednn_woq_repro.cpp
tools/sycl-kernel-bench/: CMakeLists.txt  README.md  benchmark_harness.hpp  data_generators.hpp  dpas_config.hpp  dpas_configs.json  emit_dpas_tests.py  extract_kernel_metrics.py  kernel_registry.hpp  main.cpp  model_shapes.hpp  mxfp4_source_line_probe.cpp  output_formats.hpp  parse_ze_info.py  precision-bench  precision-bench.cpp  roofline.hpp  run_dpas_memory_patterns_sweep.py  run_dpas_sweep.py  summarize_dpas_sweep.py  test_matrix.json  test_matrix.md  validate_matrix.py  validate_matrix.sh
tools/sycl-kernel-bench/analysis/: aggregate_results.py  find_crossovers.py
tools/sycl-kernel-bench/kernels/dpas_exploration/: dpas_baseline.cpp  dpas_common.hpp  dpas_kernels.hpp  dpas_memory_patterns.cpp  dpas_sweep.cpp
tools/sycl-kernel-bench/kernels/reference/: memory_bandwidth.cpp  mxfp4_decode_bandwidth.cpp  mxfp4_inline_dot.cpp  mxfp4_pair_glu_source_line_device.cpp  onednn_fp16_gemm.cpp  onednn_int8_gemm.cpp  onednn_mxfp4_gemm.cpp  onednn_woq_gemm.cpp  reference_kernels.hpp  roofline_compute.cpp
tools/sycl-kernel-bench/kernels/tier1/: esimd_block_load.cpp  esimd_common.hpp  esimd_slm.cpp  mmvq_aos_baseline.cpp  mmvq_coalesced.cpp  mmvq_prefetch.cpp  mmvq_slm_cached.cpp  mmvq_soa_baseline.cpp  mmvq_tier1.hpp  mmvq_tier1_common.hpp  mmvq_wide_load.cpp
tools/sycl-kernel-bench/kernels/tier2/: mmvq_esimd_v2.cpp  mmvq_tier2.hpp  mmvq_tier2_common.hpp  mmvq_tier2_spec.cpp  mmvq_tier2_spec_common.hpp  mmvq_xmx_cf2.cpp  mmvq_xmx_cf2_soa.cpp  mmvq_xmx_cf4.cpp  mmvq_xmx_cf4_soa.cpp  mmvq_xmx_tile.cpp  mmvq_xmx_tile_db.cpp  mmvq_xmx_tile_db_soa.cpp  mmvq_xmx_tile_soa.cpp
tools/sycl-kernel-bench/kernels/tier3/: mmvq_tier3.hpp  mmvq_tier3_spec.cpp  mmvq_tier3_spec_common.hpp
tools/sycl-kernel-bench/kernels/tier4/: coalesced_xmx_aligned.cpp  esimd_cooperative.cpp  esimd_hybrid.cpp  hybrid_adaptive.cpp  mmvq_tier4.hpp  mmvq_tier4_spec_common.hpp  mmvq_xmx_fused.cpp  mxfp4_native.cpp  q4_0_specialized.cpp  q6_k_specialized.cpp
tools/sycl-kernel-bench/tests/: test_mxfp4_layer_glu_down_variants.py  test_perf_expectations.py  test_reference_kernels_impl.py  test_reference_kernels_registry.py  test_validate_matrix_pytest.py
tools/sycl-mxfp4-moe-bench/: CMakeLists.txt  main.cpp  route_baseline.cpp  route_fused_layer.cpp  route_host_bounce.cpp  route_launch.cpp  route_prepack.cpp  route_row_parallel.cpp  tg_bench_common.cpp  tg_bench_common.hpp
tools/sycl-mxfp4-moe-bench/tests/: test_algorithmic_study.py  test_microbench_orchestrator.py  test_native_fp4_bdpas_probe.py  test_tg_bench_baseline_contract.py  test_tg_bench_dry_run.py  test_tg_bench_fused_layer.py  test_tg_bench_host_bounce.py  test_tg_bench_launch.py  test_tg_bench_parser.py  test_tg_bench_prepack_combined.py  test_tg_bench_prepack_layout.py  test_tg_bench_row_parallel.py
tools/sycl-source-line-probe/: CMakeLists.txt  main.cpp
(+960 files in other folders)
